js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-import-call-unknown.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
